Bug 281390 - Unexisting signals and slots
Summary: Unexisting signals and slots
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-05 12:51 UTC by Albert Astals Cid
Modified: 2012-07-06 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2011-09-05 12:51:42 UTC
Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

Starting telepathy-kde-contactlist 0.1 gives me
Object::connect: No such signal ContactDelegate::visualChange()
Object::connect: No such slot ContactDelegate::overlayDestroyed(QObject*)
Object::connect: No such slot ContactDelegate::contactRemoved(QModelIndex,int,int)

It would be good if those were cleared since gives to the user a weird feeling of not much quality

Reproducible: Always

Steps to Reproduce:
* Start the app

Actual Results:  
* QObject complains about connections happen

Expected Results:  
* All slots/signals are properly connected

OS: Linux (x86_64) release 3.0-ARCH
Compiler: gcc
Comment 1 David Edmundson 2011-09-06 10:58:32 UTC
This is fixed since 0.1
Comment 2 Martin Klapetek 2011-09-06 13:37:24 UTC
Actually it's not fixed. I have an idea for a fix, I'll try that later.
Comment 3 Martin Klapetek 2011-09-12 17:49:18 UTC
Git commit 534951439150ae357cfb3a44fb35c8e73c8a0553 by Martin Klapetek.
Committed on 12/09/2011 at 19:45.
Pushed by mklapetek into branch 'master'.

Temporarily disble few connections to non-existant slots/signals. This kills the errors in console output and apparently everything still works. I plan to do a review of the overlays so if I'll find out these are indeed not needed, I'll remove them for good.

BUG: 281390

M  +10   -10   contact-delegate-overlay.cpp

http://commits.kde.org/telepathy-contact-list/534951439150ae357cfb3a44fb35c8e73c8a0553