Temporarily disble few connections to non-existant slots/signals. This kills the errors in console output and apparently everything still works. I plan to do a review of the overlays so if I'll find out these are indeed not needed, I'll remove them for good.

BUG: 281390